src/test/deca/syntax/invalid/sansobjet/lex_floathex_min1_invalid.deca
//Erreur de compilation: arrondi a zero et flottant non nulle
//Description: test borne inferieur
//Resultats: ligne 4: nombre trop petit 
0x1.0p-128


